[tool.poetry]
name = "markov-chains"
version = "0.1.0"
description = ""
authors = ["Tomasz Maćkowiak <kurazu@kurazu.net>"]
readme = "README.md"
packages = [{include = "markov_chains"}]

[tool.poetry.dependencies]
python = "~3.10"
tensorflow = "^2.11.0"
jupyter = "^1.0.0"
notebook = "^6.5.2"
tensorflow-text = "^2.11.0"
returns = "^0.19.0"
more-itertools = "^9.0.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"
ipdb = "^0.13.11"
ipython = "^8.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
